# simple-rest-api

./: .gitignore  Dockerfile  README.md  app.db  app.py  database.py  models.py  pyproject.toml  settings.py
alembic/: env.py
alembic/versions/: c91f0758b9af_add_geo_location.py
tests/: conftest.py  test_delete_geo.py  test_get_geo.py  test_post_geo.py
utils/: __init__.py  dependencies.py  locator.py  logger.py
